# acikisletme

./: AUTHORS  Makefile  Makefile.am  Makefile.in  README.md  TODO  aclocal.m4  config.h  config.h.in  config.status  configure  configure.in  libtool
conf/: fatura.sablon  printer.conf  psql.conf  test.txt  yedek.conf
doc/en/: install.txt
doc/tr/: ayarlar.txt  cari.txt  kurulum.txt  lisans.txt  raporlar.txt  stok.txt
include/: Makefile  Makefile.am  Makefile.in  ayarlar.h  cari.h  ceksenet.h  conf.h  faturagelen.h  faturakesilen.h  irsaliyecikis.h  irsaliyegiris.h  market.h  raporlar.h  stok.h  yardim.h
intl/: Makefile
po/: Makefile  Makefile.in  POTFILES  POTFILES.in  acikisletme.pot  tr.gmo  tr.po
sql/: default.sql
src/: Makefile  Makefile.am  Makefile.in  main.c
src/.deps/: main.Po
