## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjuta project configuration

acikisletme_includedir = $(pkgincludedir)

acikisletme_include_DATA = \
	ayarlar.h\
	cari.h\
	ceksenet.h\
	conf.h\
	faturagelen.h\
	faturakesilen.h\
	irsaliyecikis.h\
	irsaliyegiris.h\
	market.h\
	raporlar.h\
	stok.h\
	yardim.h

EXTRA_DIST = $(acikisletme_include_DATA)
